@@ -6,7 +6,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,7 +19,7 @@ public class CourseService {
     public List<Course> getAllCourses() {
         try {
             List<CourseEntity> all = courseRepository.findAll();
-            return all.stream().map(courseMapper::map).collect(Collectors.toList());
+            return all.stream().map(courseMapper::map).toList();
         } catch (Exception e) {
             throw new ElearningPlatformException("No course entity", e);
         }
